--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="columns is-vcentered">
             <div class="column is-5 is-offset-1 landing-caption">
                 <h1 class="title is-1 is-bold is-spaced">分享</h1><h2 class="subtitle is-5 is-muted">
-                Personal website and blog
+                学习 沉淀 成长
                 </h2>
             </div>
             <div class="column is-5 is-offset-1">
@@ -341,12 +341,12 @@
           </a>
       </li>
       <li class="no-children">
-          <a href="/tags/article">
+          <a href="/tags/mysql">
             <div class="columns">
               
               <table width="100%">  
                   <tr>
-                    <td class=""><span class="icon"><i class="fa fa-cube"></i></span>article</td>
+                    <td class=""><span class="icon"><i class="fa fa-cube"></i></span>Mysql</td>
                     <td class="has-text-right" >
                         <div class="tag-number">1</div>
                       
